--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,5 +1,9 @@
 extends base.pug
-
+include mixins/video
 
 block content
-    h1 Home !
+    h2 Welcome here you will see the trending videos
+    each info in videos
+        +video(info)
+    else
+        li Sorry nothing found.
