--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -3,7 +3,7 @@ include mixins/video
 
 block content
     h2 Welcome here you will see the trending videos
-    each info in videos
-        +video(info)
+    each video in videos
+        +video(video)
     else
         li Sorry nothing found.
