--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -5,11 +5,13 @@ html(lang="en")
     link(rel="stylesheet" href="https://unpkg.com/mvp.css")
   body
     header
-      h1
+      h1=pageTitle
           nav
             ul
               li 
                 a(href="/videos/upload") Upload Video
+              li 
+                a(href="/") Home
     main 
       block content
   include partials/footer.pug
