--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -5,6 +5,8 @@ block content
         p=video.description
         small=video.createdAt
     a(href=`${video.id}/edit`) Edit Video &rarr;
+    br
+    a(href=`${video.id}/delete`) Delete Video &rarr;
 
 
 
