--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -12,18 +12,20 @@ html(lang="en")
                 a(href="/") Home
               if loggedIn
                 li 
-                  a(href="/users/logout") Logout
+                  a(href="/users/edit") Edit Profile
+                li 
+                  a(href="/users/logout") Log out
                 li 
                   a(href="/my-profile") #{loggedInUser.name}의 Profile
+                li 
+                  a(href="/videos/upload") Upload Video
               else
                 li
                   a(href="/join") Join
                 li
                   a(href="/login") Login
-              li 
-                a(href="/search") Search
-              li 
-                a(href="/videos/upload") Upload Video
+                li 
+                  a(href="/search") Search
     main 
       block content
   include partials/footer.pug
