--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -11,14 +11,14 @@ html(lang="en")
               li 
                 a(href="/") Home
               if loggedIn
+                li
+                  a(href="/videos/upload") Upload Video
                 li 
+                  a(href=`/users/${loggedInUser._id}`) My Profile
+                li
                   a(href="/users/edit") Edit Profile
                 li 
                   a(href="/users/logout") Log out
-                li 
-                  a(href="/my-profile") #{loggedInUser.name}의 Profile
-                li 
-                  a(href="/videos/upload") Upload Video
               else
                 li
                   a(href="/join") Join
