--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -1,6 +1,5 @@
 extends base.pug
 
-
 block content 
     if errorMessage
         span=errorMessage
@@ -10,8 +9,8 @@ block content
         input(type="submit", value="Login")
         br
         a(href="/users/github/start") Continue with Github &rarr;
-    hr
-    div
+    include partials/social-login
+    div.auth-switch
         span Don't have an account? 
         a(href="/join") Create one now &rarr;
          
