--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -1,4 +1,38 @@
+@import "./config/_variables.scss";
+@import "./config/_reset.scss";
+
+// Config
+
+// Components
+
+@import "./components/header.scss";
+@import "./components/footer.scss";
+@import "./components/video.scss";
+@import "./components/shared.scss";
+@import "./components/forms.scss";
+@import "./components/social-login.scss";
+
+// Screens
+
+@import "./screens/search.scss";
+@import "./screens/profile.scss";
+@import "./screens/edit-profile.scss";
+
+// Defaults
+
 body {
-  background-color: red;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: $bg;
   color: white;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+main {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 50px;
 }
