--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -37,8 +37,9 @@ block content
                 textarea(cols="30", rows="10", placeholder="Write a nice comment...")
                 button Add Comment
 block scripts 
-    script(src="/static/js/videoPlayer.js") 
-    script(src="/static/js/commentSection.js") 
+    script(src="/static/js/videoPlayer.js")
+    if loggedIn 
+        script(src="/static/js/commentSection.js") 
 
 
 
