--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -19,6 +19,8 @@
 @import "./screens/profile.scss";
 @import "./screens/edit-profile.scss";
 @import "./screens/upload.scss";
+@import "./screens/watch.scss";
+
 
 // Defaults
 
