--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -25,17 +25,24 @@ block content
         small=video.createdAt
     div
         small Upload by 
-                a(href=`/users/${video.owner._id}`) #{video.owner.name}
+            a(href=`/users/${video.owner._id}`) #{video.owner.name}
     br
     if String(video.owner._id) === String(loggedInUser._id)
         a(href=`${video.id}/edit`) Edit Video &rarr;
         br
         a(href=`${video.id}/delete`) Delete Video &rarr;
     if loggedIn
-        div.video__comments 
+        div.video__add-comments 
             form.video__comment-form#commentForm
                 textarea(cols="30", rows="10", placeholder="Write a nice comment...")
                 button Add Comment
+    div.video__comments 
+        ul 
+            each comment in video.comments.reverse()
+                li.video__comment(data-id=comment.id)
+                    i.fas.fa-comment 
+                    span #{comment.text}
+                    span ❌
 block scripts 
     script(src="/static/js/videoPlayer.js")
     if loggedIn 
