--- a/src/client/scss/screens/watch.scss
+++ b/src/client/scss/screens/watch.scss
@@ -33,4 +33,8 @@
           color:black;
           margin-bottom: 10px;
       }
+      #deleteComment{
+        background-color: none;
+        border-color: none;
+      }
   }
