--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -42,7 +42,7 @@ block content
                 li.video__comment(data-id=comment.id)
                     i.fas.fa-comment 
                     span #{comment.text}
-                    span ❌
+                    button#deleteComment ❌
 block scripts 
     script(src="/static/js/videoPlayer.js")
     if loggedIn 
