--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -19,7 +19,10 @@ header
                             span 😀
                         else
                             if loggedInUser.avatarUrl
-                                 img.header__avatar(src=loggedInUser.avatarUrl)
+                                if loggedInUser.avatarUrl.includes("github")
+                                    img.header__avatar(src=loggedInUser.avatarUrl crossorigin)
+                                else 
+                                    img.header__avatar(src=loggedInUser.avatarUrl crossorigin)
             else    
                 li
                     a(href="/login")  Login                        
